<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello, yuanhai</string>
    <string name="app_name">元海</string>
   
    <string name="setpassword_text">请输入手势密码</string>
    <string name="setpassword_btn">请绘制手势</string>
    <string name="setpassword_error">密码输入错误,请重新输入</string>
    <string name="setpassword_right">登陆成功！</string>
    
    <string name="other_text1">手机号:</string>
    <string name="other_text2">密    码:</string>
    <string name="edt_btn">登       录</string>
    <string name="find_password">找回密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_string">免费注册</string>
    <string name="loading_string">努力加载中</string>
    <string name="pass_error_toast">密码错误！</string>
    <string name="user_no_exist">用户名不存在，请核实！</string>
    <string name="user_password_go">登陆成功</string>
    <string name="pass_no_erio">密码不能为空，请输入密码！</string>
    <string name="pass_user_exception">出现异常，请重新再试！</string>
    <string name="respose_error">访问错误！</string>
    <string name="pass_net_exception">连接服务器失败，请检查网络连接是否正常.</string>
    <string name="user_password_error">用户名或密码错误！</string>
    
    <string name="tab_1">首页</string>
    <string name="tab_2">工作</string>
    <string name="tab_3">设置</string>
    <string name="tab_4">生活</string>
    <string name="notic_string">公告通知</string>
    <string name="work_report_string">工作汇报</string>
    <string name="adv_string">园区风采</string>
    <string name="video_string">园区实况</string>
    	 <!-- XlistView相关 -->
	<string name="xlistview_footer_hint_textview"></string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在努力...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">默认显示不需要可去掉</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="new_work_report">增加新的工作报告</string>
    <string name="notice_text">公告通知</string>
    <string name="notice_failed">刷新公告通知失败</string>
    
    <!-- 工作汇报 -->
    <string name="name">客户姓名:</string>
    <string name="time">报告日期:</string>
    <string name="Visit">拜访方式:</string>
    <string name="talk">洽谈内容:</string>
    <string name="Customer">客户情报:</string>
    <string name="mark">市场情报:</string>
    <string name="paizhao">附件图片:</string>
    <string name="commit">汇报工作</string>
    <string name="commit_failed">汇报工作失败</string>
    <string name="commit_success">汇报工作成功！</string>
    <string name="image_is_null">请拍照或者选择图片</string>
    <string name="costomerisr_is_null">客户情报不能为空</string>
    <string name="name_is_null">客户姓名不能为空</string>
    <string name="Visit_is_null">拜访方式不能为空</string>
    <string name="talk_is_null">洽谈内容不能为空</string>
    <string name="mark_is_null">市场情报不能为空</string>
    <string name="work_report_list">工作汇报列表</string>
    <string name="commit_btn">提交</string>
    <string name="new_btn">新建</string>
    <string name="work_list_failed">刷新工作汇报列表失败</string>
    
    <!-- 更多 -->
     <string name="more_more">生活</string>
     <!-- 条批1 -->
    <string name="more_image0_text">物业服务</string><string name="more_image0_text1">缴物业费</string>
    <string name="more_image0_text2">缴停车费</string>
    <string name="more_image0_text3">投诉保修</string>
    <!-- 条批2 -->
    <string name="more_image1_text">财税服务</string>
    <string name="more_image1_text1">汇算清缴</string>
    <string name="more_image1_text2">工商登记</string>
    <string name="more_image1_text3">人才派遣</string>
    <string name="more_image1_text4">记账代理</string>
    <string name="more_image1_text5">税务代理</string>
    <string name="more_image1_text6">财税顾问</string>
    <!-- 条批3 -->
    <string name="more_image2_text">呼叫中心</string>
    <string name="more_image2_text1">电话租赁</string>
    <string name="more_image2_text2">服务外包</string>
    <!-- 条批4 -->
    <string name="more_image3_text">物业管家</string>
    <string name="more_image3_text1">安保</string>
    <string name="more_image3_text2">顾问服务</string>
    <string name="more_image3_text3">绿化保洁</string>
    <string name="more_image3_text4">资产管理</string>

    <!-- 条批5 -->
    <string name="more_image4_text">信息工程</string>
    <string name="more_image4_text1">弱电工程</string>
    <string name="more_image4_text2">IT建设</string>
    <string name="more_image4_text3">系统托管</string>
    <string name="seting">设置</string>
    <string name="seting_01">安全</string>
    <string name="seting_02">版本信息</string>

    <string name="ad_failed">刷新园区风采失败</string>
    <string name="play_video_fail">播放在线视频失败</string>
    <string name="play_video_success">连接在线视频成功</string>
    
    <string name="live_video">实时视频</string>
    <string name="live_failed">刷新园区实况失败</string>
    <string name="live_can_not_selected">手机最多同时只可以连接四个摄像头</string>
    <string name="please_select_video">请选择一个或多个摄像头</string>
    <string name="snapshot_successed">抓拍成功,图像位置:</string>
    <string name="snapshot_failed">抓拍失败</string>
    <string name="full_screen_tip">已进入全屏模式,双击退出全屏</string>
    
    <string name="ok">确定</string>
    
    <string name="order">订单</string>
    <string name="tab_me">我</string>
    <string name="me">我的元海</string>
    <string name="me_list_failed">刷新我的元海失败</string>
    <string name="order_type">订单类型:</string>
    <string name="order_date">服务日期:</string>
    <string name="order_time">服务时间:</string>
    <string name="order_contact">联系方式:</string>
    <string name="order_contact_people">联系人:</string>
    <string name="order_content">服务说明:</string>
    <string name="contact_is_null">联系方式不能为空</string>
    <string name="content_is_null">订单说明不能为空</string>
    <string name="contact_people_is_null">联系人不能为空</string>
    <string name="order_failed">下单失败</string>
    <string name="order_success">下单成功！</string>
    <string name="no_order">没找到与您相关的记录</string>
    <string name="call_phone">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 400-6622-781</string>
    
    <string name="my_location_failed">获取位置信息失败！</string>
    <string name="my_location">当前位置:</string>
    <string name="get_my_location">正在获取当前位置信息&#8230;</string>
    <string name="tv_connect_cam">正在载入中....</string>
    <string name="hk_camera_video">园区实况</string>
    <string name="cameraVideo">视频监控</string>
</resources>