<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2ED" 
    android:id="@+id/rootLayout">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dip"
        android:layout_marginBottom="10dip"
        android:background="@drawable/yuan_hai" />

    <EditText
        android:id="@+id/other_edt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:paddingLeft="10dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="8dip"
        android:layout_centerHorizontal="true"
        android:background="@drawable/lu_deng"
        android:hint="@string/other_text1" />
    <EditText
        android:id="@+id/other_edt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="1dip"
        android:paddingLeft="10dip"
        android:layout_below="@+id/other_edt1"
        android:layout_centerHorizontal="true"
        android:inputType = "textPassword"
        android:background="@drawable/lu_deng2"
        android:hint="@string/other_text2" />

   <TextView
        android:id="@+id/other_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/other_edt2"
        android:gravity="center"
        android:layout_marginTop="25dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/selector"
        android:text="@string/edt_btn" 
        android:textSize="20sp"/>
   <RelativeLayout 
       android:id="@+id/ops_layout"
        android:layout_centerVertical="true"
       android:layout_alignLeft="@id/other_btn"
       android:layout_alignRight="@id/other_btn"
       android:layout_marginBottom="10dip"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >
      
   </RelativeLayout>
 <TextView 
           android:id="@+id/find_user_id"
           android:layout_marginLeft="10dip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="20dip"
           android:layout_centerHorizontal="true"
           android:text="@string/find_password"
           android:textColor="#000" />
</RelativeLayout>