<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/white">
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/info_linear"
        android:background="@drawable/info_bg"
        android:layout_alignParentTop="true"/>
 
    <LinearLayout 
        android:id="@+id/info_linear"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="10dip" >
        <RelativeLayout 
            android:id="@+id/notice_layout"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" >
            <Button 
                android:id="@+id/image_notic" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/notice_selector" />
            <TextView 
                android:layout_below="@id/image_notic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/notic_string"
                android:textColor="#000000"
                android:layout_marginTop="5dip" />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/working_layout"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" >
            <Button 
                android:id="@+id/image_working" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/work_selector" />
            <TextView 
                android:layout_below="@id/image_working"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/work_report_string"
                android:textColor="#000000"
                android:layout_marginTop="5dip" />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/adv_layout"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" >
            <Button 
                android:id="@+id/image_adv" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/avd_selector" />
            <TextView 
                android:layout_below="@id/image_adv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/adv_string"
                android:textColor="#000000"
                android:layout_marginTop="5dip" />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/video_layout"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" >
            <Button 
                android:id="@+id/image_video" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/video_selector" />
            <TextView 
                android:layout_below="@id/image_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/video_string"
                android:textColor="#000000"
                android:layout_marginTop="5dip" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
